--- a/Client/src/Views/HomePage/Components/MainContent.css
+++ b/Client/src/Views/HomePage/Components/MainContent.css
@@ -1,6 +1,6 @@
 #search-bar-row {
     margin: 20px;
 }
-#main-content{
+/* #main-content{
     margin-left:450px;
-}
+} */
