--- a/Client/src/Views/HomePage/Components/SponsorCarousel.css
+++ b/Client/src/Views/HomePage/Components/SponsorCarousel.css
@@ -1,5 +1,5 @@
 #carousel-img {
-    max-height: 570px;
+    max-height: 150px;
     max-width: 270px;
     justify-content: center;
     text-align: center;
@@ -21,7 +21,7 @@
     border: 2px solid #28231C;
     border-radius: 10px;
     box-shadow: 1px -1px 5px #000;
-    height: 570px;
+    height: fit-content;
     max-width: 1000px;
     margin-left: 100px;
     display: flex;
